fix horizontal scrolling in footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -66,6 +66,7 @@ footer {
   padding: 20px 0;
   text-align: center;
   @media only screen and (min-width: $MIN_WIDTH_PHONE) {
+    width: auto;
     text-align: left;
   }
 }
